--- a/index.css
+++ b/index.css
@@ -1,5 +1,20 @@
-body {
+html {
   font: 100% Helvetica, sans-serif;
   color: #333;
-  background-color: red;
+}
+
+html * {
+  margin: 0px;
+}
+
+@media (min-width: 500px) {
+  html body {
+    background-color: red;
+  }
+}
+
+@media (max-width: 499px) {
+  html body {
+    background-color: blue;
+  }
 }
