--- a/index.scss
+++ b/index.scss
@@ -1,8 +1,20 @@
 $font-stack: Helvetica,
 sans-serif;
 $primary-color: #333;
-body {
+html {
     font: 100% $font-stack;
     color: $primary-color;
-    background-color: red;
+    * {
+        margin: 0px;
+    }
+    @media (min-width: 500px) {
+        body {
+            background-color: red;
+        }
+    }
+    @media (max-width: 499px) {
+        body {
+            background-color: blue;
+        }
+    }
 }
