--- a/Sass/template1.scss
+++ b/Sass/template1.scss
@@ -16,8 +16,10 @@ body {
         box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
     }
     page[size="A4"] {
-        width: 31cm;
-        height: 50.7cm;
+        width: 595px;
+        height: 842px;
+        // width: 31cm;
+        // height: 50.7cm;
     }
     page[size="A4"][layout="portrait"] {
         width: 29.7cm;
@@ -35,7 +37,7 @@ body {
             background-color: #00263c;
             float: left;
             width: 20%;
-            height: 1916px;
+            height: 860px;
         }
         #right {
             background-color: #ffffff;
