--- a/Sass/index.scss
+++ b/Sass/index.scss
@@ -1,13 +1,18 @@
+ *, *::before, *::after {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 $font-stack: Helvetica,
 sans-serif;
 $primary-color: #333;
 html {
+    font-size: 62.5%
     font: 100% $font-stack;
     color: $primary-color;
-    * {
-        margin: 0px;
-    }
+   
     @media (min-width: 500px) {
+        font-size: 50%
         body {
             background-color: red;
         }
